--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "guidebot",
+  "name": "boilerplate",
   "version": "2.3.7",
-  "description": "A boilerplate example bot with command handler and reloadable commands. Updated and Maintained by the Idiot's Guide Community",
+  "description": "Custom Discord bot boilerplate. Forked from guidebot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "node setup.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": ">=12"
@@ -24,11 +23,7 @@
   },
   "homepage": "https://github.com/An-Idiots-Guide/guidebot#readme",
   "dependencies": {
-    "better-sqlite3": "^6.0.1",
-    "chalk": "^4.0.0",
     "discord.js": "^12.3.1",
-    "enmap": "^5.2.4",
-    "inquirer": "^7.1.0",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2"
   }
