--- a/config.js.example
+++ b/config.js.example
@@ -1,7 +1,7 @@
 const config = {
   "owner_id": "",
-  "guild_id": "",
   "token": "",
+  intents: ["GUILDS","GUILD_MESSAGES","DIRECT_MESSAGES"],
   "defaultSettings" : {
     "prefix": "-",
     "systemNotice": "true", // This gives a notice when a user tries to run a command that they do not have permission to use.
