--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   },
   "homepage": "https://github.com/An-Idiots-Guide/guidebot#readme",
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "moment": "^2.24.0",
-    "moment-duration-format": "^2.3.2"
+    "discord.js": "^12.3.1"
   }
 }
